# Raycaster

./: CMakeLists.txt  README.md
cmake/: .gitignore
include/: Input.h  Player.h  PlayerOperations.h  RaycastEngine.h  Types.h  Vectors.h  Window.h  f16.h  f32.h
src/: RaycastEngine.c  Window.c  main.c
